<resources>
    <string name="app_name">Pepak Jawa</string>
    <string name="title_activity_pramasastra">Paramasastra</string>
    <string name="title_activity_wayang">Wayang</string>
    <string name="title_activity_kawruh_basa">Kawruh Basa</string>
    <string name="title_activity_rupa_kawruh">Rupa Kawruh</string>
    <string name="title_activity_kesusastraan">Kesusastraan</string>
    <string name="title_activity_aksara_jawa">Aksara</string>
    <string name="title_activity_kuis">Kuis</string>
    <string name="title_activity_score">Score</string>
    <string name="question">Question</string>
    <string name="play_again">Play again</string>
    <string name="time">15</string>
    <string name="correct">Correct</string>
    <string name="wrongans">Opps the ans was wrong</string>
    <string name="Waktu_Habis">Time Up</string>
    <string name="play_game">Play Game</string>
    <string name="quit">Quit</string>
    <string name="next">Next</string>
    <string name="cancel">✖</string>
    <string name="pepak_dashboard">PEPAK DASHBOARD</string>
    <string name="jawaban_benar">Jawaban Benar</string>
    <string name="lanjut">Lanjut</string>
    <string name="paramasastra">Paramasastra</string>
    <string name="rupa_kawruh">Rupa Kawruh</string>
    <string name="paramasastra_describe">Paramasastra adalah tata bahasa dalam bahasa jawa</string>
    <string name="hore">
        Hore! \n Kamu mulai menguasainya :)
    </string>
    <string name="aksarajawa">
        Disebut juga carakan, merupakan kata dasar Aksara Jawa yang berjumlah 20 aksara pokok dan bersifat kesukukataan.
        Masing masing aksara mempunyai pasangan yang berfungsi sebagai penghubung suku kata tertutup dengan suku kata berikutnya.
    </string>
    <string name="shandangan">
        Merupakan tanda yang dipakai untuk merubah bunyi dalam tulisan jawa. Shandangan terbagi menjadi 2, yaitu shandangan vokal dan shandangan
        konsonan penutup suku kata. Aksara yang tidak mempunyai  shandangan vokal dilafalkandengan vokal\a\ (seperti o pada kata pokok)
    </string>
    <string name="aksaramurda">
        Dipakai untuk menuliskan nama orang, gelar, nama tempat, dan nama lembaga. Masing-masing aksara murda mempunyai pasangan.
    </string>
    <string name="aksaraswara">
        Digunakan untuk menulisaksara vokal yang menjadi suku kata yang berasal dari bahasa asing untuk mempertegas pelafalannya.
    </string>
    <string name="wilangan">
        Dipakai untuk menyatakan lambang bilangan atau nomor. Penulisan wilangan jawa selalu diapit oleh pada pangkat.
    </string>
    <string name="rekan">
        Aksara rekan atau Rekaan dipakai untuk menulis aksara konsonan pada kata-kata asing yang masih dipertahankan keaslian pengucapannya.
    </string>
    <string name="referensi">
        Referensi \n Icon, Gambar dan Artikel
    </string>
    <string name="wayangall">
        Free Vector Design by:  \n
        <a href="https://www.Vecteezy.com/" rel="nofollow" target="_blank">https://www.Vecteezy.com/</a>
    </string>
    <string name="icon">
        <a href='https://www.freepik.com/free-vector/6-clock-icons_995776.htm'>https://www.freepik.com/free-vector/6-clock-icons_995776.htm</a>
    </string>
    <string name="background">
        <a href="https://pngtree.com/freebackground/shrine-temple-building-place-of-worship-background_135544.html">
            https://pngtree.com/freebackground/shrine-temple-building-place-of-worship-background_135544.html</a>
    </string>
    <string name="sound">
        <a href='https://www.freepik.com/free-vector/colorful-origami-banner-collection_1230245.htm'>
            https://www.freepik.com/free-vector/colorful-origami-banner-collection_1230245.htm</a>
    </string>
    <string name="artikel1">
        Artikel by \n
        <a href='https://wayang.wordpress.com/2006/10/26/kresna/'>https://wayang.wordpress.com</a>
    </string>
    <string name="artikel2">
        <a href='http://tokohpewayanganjawa.blogspot.com//'>http://tokohpewayanganjawa.blogspot.com//</a>
    </string>
    <string name="artikel3">
        <a href='https://caritawayang.blogspot.com/'>https://caritawayang.blogspot.com/</a>
    </string>
    <string name="artikel4">
        <a href='http://nuradiwibowo02.blogspot.com/'>http://nuradiwibowo02.blogspot.com/</a>
    </string>
    <string name="artikel5">
        <a href='https://deviyohanna.wordpress.com/2014/06/14/deskripsi-tokoh-wayang-indonesia/ artikel'>https://deviyohanna.wordpress.com/2014/06/14/deskripsi-tokoh-wayang-indonesia/ artikel</a>
    </string>
    <string name="artikel16">
    Sound Efect by \n
    <a href='https://freesound.org/people/Bertrof/sounds/131657/'>https://freesound.org/people/Bertrof/sounds/131657/</a>
    </string>
    <string name="artikel17">
    <a href='https://freesound.org/people/LittleRainySeasons/sounds/335908/'>https://freesound.org/people/LittleRainySeasons/sounds/335908/</a>
    </string>
    <string name="artikel18">
        <a href='https://alangalangkumitir.wordpress.com/kamus-jawa-%E2%80%93-indonesia/'>https://alangalangkumitir.wordpress.com/kamus-jawa-%E2%80%93-indonesia/</a>
    </string>
    <string name="kresna">
        Prabu Kresna yang waktu mudanya bernama Narayana, adalah putra Prabu Basudewa, raja negara Mandura dengan permaisuri Dewi Mahendra/Maekah (Jawa). Ia lahir kembar bersama kakaknya, Kakrasana,
        dan mempunyai adik lain ibu bernama Dewi Sumbadra/Dewi Lara Ireng, putri Prabu Basudewa dengan permaisuri Dewi Badrahini. Prabu Kresna juga mempunyai saudara lain ibu bernama Arya Udawa, putra Prabu Basudewa dengan Ken Sagupi, seorang swarawati keraton Mandura. \n\n
        Prabu Kresna adalah titisan Sanghyang Wisnu yang terakhir. Selain sangat sakti dan dapat bertiwikrama, ia juga mempunyai pusaka-pusaka sakti, antara lain; Senjata Cakra, Kembang Wijayakusuma, Terompet/Sangkala Pancajahnya, Kaca paesan, Aji Pameling dan Aji Kawrastawan.
        Ia mendapat negara Dwarawati setelah mengalahkan Prabu Narasinga, kemudian naik tahta bergelar Prabu Sri Bathara Kresna.
        Prabu Kresna mempunyai 4 (empat) orang permaisuri :\n
        1.Dewi Jembawati, putri Resi Jembawan dengan Dewi Trijata dari pertapaan Gadamadana, berputra ; Samba dan Gunadewa (berwujud kera).\n
        2.Dewi Rukmini, putri Prabu Bismaka/Arya Prabu Rukma dengan Dewi Rumbini dari negara Kumbina, berputra: Saradewa (berwujud raksasa), Partadewa dan Dewi Titisari/Sitisari. \n
        3.Dewi Setyaboma, putri Prabu Setyajid/Arya Ugrasena dengan Dewi Wersini, dari negara Lesanpura, berputra ; Arya Setyaka.\n
        4.Dewi Pratiwi, istri turunan sebagai titisan Sanghyang Wisnu, putri Nagaraja dari Sumur Jalatunda, berputra ; Bambang Sitija dan Dewi Siti Sundari.\n\n
        Setelah meninggalnya Prabu Baladewa/Resi Balarama, kakaknya, dan musnahnya seluruh Wangsa Yadawa, Prabu Kresna menginginkan moksa. Ia wafat dalam keadaan bertapa dengan perantaraan panah seorang pemburu bernama Ki Jara yang mengenai kakinya.
    </string>
    <string name="sadewa">
        Sahadewa atau Sadewa adalah saudara terakhir dari para Pandawa. Sadewa memiliki saudara kembar yaitu Nakula, mereka juga menjadi tokoh protagonis dalam cerita Mahabarata. Sadewa adalah putera dari Pandu dan Dewi Madri.
        Sadewa dan saudara kembarnya Nakula dikisahkan sebagai anugerah dari dewa kembar bernama Aswinkepada Dewi Madri, karena Pandu mendapat kutukan dari Resi Kindama bahwa ia akan mati apabila mengawini istrinya. \n\n
        Sadewa  memiliki sifat yang bijak, bahkan walaupun ia putera yang paling muda dari Para Pandawa, ia adalah yang terbijak. Kakaknya, Yudistira pernah mengatakan bahwa Sadewa lebih bijak daripada Wrehaspati, yaitu guru para dewa.\n\n
        Sadewa memiliki kepandaian dalam hal ilmu perbintangan atau astronomi. Kepandaiannya jauh di atas murid-murid Resi Drona yang lainnya. Ia mampu mengetahui kejadian yang akan datang, namun ia pernah dikutuk, apabila sampai membeberkan rahasia takdir,
        maka kepalanya akan terbelah menjadi dua. Ia juga pandai dalam hal ilmu peternakan sapi. Dan pada saat Para Pandawa menjalani masa penyamaran di Kerajaan Matsyakarena kalah bermain dadu dengan Korawa, Sadewa menyamar menjadi seorang gembala sapi bernama Tantripala. \n\n
        Sadewa menikah dengan puteri Jarasanda,raja Kerajaan Magadha, dan dari pernikahan tersebut, ia memperoleh seorang putera bernama Suhotra, Sedangkan dari Dropadi, yang merupakan istri para Pandawa setelah Arjuna memenangkan sayembara memanah di kerajaan Pancala, Sadewa memiliki putera bernama Srutakirti. \n\n
        Istri Sadewa versi pewayangan hanya seorang, yaitu Perdapa putri Resi Tambrapetra. Dari perkawinan itu lahir dua orang anak bernama Niken Sayekti dan Bambang Sabekti. Masing-masing menikah dengan anak-anak Nakula yang bernama Pramusintadan Pramuwati. \n\n
        Sadewa  juga turut serta dalam peperangan besar di Kurukshetra (Bharatayuddha). Dalam kisah Mahabharata, pada hari ke-18 Sadewa bertempur melawan Sengkuni, dan ia berhasil mengalahkan Sengkuni dengan pedangnya. Sengkuni adalah paman para Korawa dari pihak ibu. Ia licik dan yang memicu permusuhan antara Pandawa dan Korawa, sehingga meletus perangBharatayuddha.\n\n
        Sadewa juga merupakan tokoh utama dalam Kakawin Sudamala, yaitu karya sastra berbahasa Jawa Kuna peninggalan Kerajaan Majapahit. Dalam naskan ini diceritakan tentang kutukan yang menimpa istri Batara Guru yang bernama Umayi, akibat perbuatannya berselingkuh dengan Batara Brahma.Umayi dikisahkan berubah menjadi Rakshasi bernama Ra Nini,
        dan hanya bisa kembali ke wujud asal apabila diruwat oleh bungsu Pandawa. Oleh karena itu, Sadewa diculik dan dipaksa untuk memimpin prosesi ruwatan. Setelah dirasuki batara Guru, barulah Sadewa menjalankan permintaan Ra Nini. Kemudian Sadewa mendapat julukan Sudamala yang berarti “menghilangkan penyakit”. Dan dengan petunjuk Ra Nini yang sudah berubah menjadi Umayi, Sadewa pun pergi ke desa Prangalas menikahi putri seorang pertapa bernama Tambrapetra, yang bernama Predapa. \n\n
        Sadewa meninggal dalam perjalanan ke puncak gunung Himalaya bersama para pandawa dan istri mereka Dropadi. Sadewa meniggal setelah Dropadi. Arwah Sadewa mencapai kedamaian di surga.

    </string>
    <string name="kuis">Kuis</string>
    <string name="_10">10</string>
    <string name="ini_pertanyaanya">ini pertanyaanya?</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="d">D</string>
    <string name="c">C</string>
</resources>