<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3E8EE"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".QuizActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg">


    <View
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:id="@+id/results_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/coinImage"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/thropy"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/triviaQuizText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/timeText"
                    android:layout_toRightOf="@+id/coinText"
                    android:gravity="center"
                    android:text="@string/kuis"
                    android:textColor="@color/Black"
                    android:textSize="25sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/coinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/coinImage"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/_10"
                    android:textSize="20sp"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/time"
                    android:textSize="20sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/triviaQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/ini_pertanyaanya"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <info.hoang8f.widget.FButton
                android:id="@+id/buttonA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="buttonA"
                android:shadowColor="@color/colorMintDark"
                android:text="@string/a"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />

            <info.hoang8f.widget.FButton
                android:id="@+id/buttonB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="buttonB"
                android:shadowColor="@color/colorMintDark"
                android:text="@string/b"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />


            <info.hoang8f.widget.FButton
                android:id="@+id/buttonC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="buttonC"
                android:shadowColor="@color/colorMintDark"
                android:text="@string/c"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />

            <info.hoang8f.widget.FButton
                android:id="@+id/buttonD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="buttonD"
                android:shadowColor="@color/colorMintDark"
                android:text="@string/d"
                android:textColor="@color/white"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
</ScrollView>